--- a/requirements.txt
+++ b/requirements.txt
@@ -51,6 +51,7 @@ jupyter_client==8.4.0
 jupyter_core==5.4.0
 jupyterlab-pygments==0.2.2
 langchain==0.2.8
+langchain-community==0.2.7
 loguru==0.7.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
